--- a/public/style.css
+++ b/public/style.css
@@ -44,34 +44,28 @@ form div .operator{
 }
 
 @media screen and (max-width: 480px){
-    .calculator{
-    background-color: #3a4452;
-    width: 100px;
-}
 
 .calculator form input{
-    border: 0;
-    outline: 0;
-    width: 30px;
-    height: 30px;
-    border-radius: 5px;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.2);
-    background: transparent;
-    font-size: 20px;
-    cursor: pointer;
-    color: white;
-    margin: 10px;
+    width: 40px;
+    height: 40px;
+    margin: 5px;
 }
 
-.display input{
-    text-align: right;
-    flex:1;
-    font-size: 45px;
-    box-shadow: none;
-
-}
 form input .equal{
-    width: 80px;
+    width: 110px;
 }
 }
+
+@media screen and (max-width: 320px){
+
+.calculator form input{
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+}
+
+form input .equal{
+    width: 92px;
+}
+}
+
