--- a/style.css
+++ b/style.css
@@ -38,5 +38,30 @@
 form div .operator{
     color: aqua;
 }
+@media screen and (max-width: 480px){
 
+.calculator form input{
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+}
+
+form input .equal{
+    width: 110px;
+}
+}
+
+@media screen and (max-width: 320px){
+
+.calculator form input{
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+}
+
+form input .equal{
+    width: 92px;
+}
+}
  
+
