--- a/style.css
+++ b/style.css
@@ -56,12 +56,26 @@ form input .equal{
 .calculator form input{
     width: 40px;
     height: 40px;
+    margin: 10px;
+}
+
+form input .equal{
+    width: 110px;
+}
+}
+
+@media screen and (min-width: 260px and max-width: 319px){
+
+.calculator form input{
+    width: 35px;
+    height: 40px;
     margin: 5px;
 }
 
 form input .equal{
-    width: 92px;
+    width: 90px;
 }
 }
  
+
 
