--- a/public/style.css
+++ b/public/style.css
@@ -35,14 +35,9 @@
 
 }
 
-form input .equal{
-    width: 145px;
-}
-
 form div .operator{
     color: aqua;
 }
-
 @media screen and (max-width: 480px){
 
 .calculator form input{
@@ -61,13 +56,23 @@ form input .equal{
 .calculator form input{
     width: 40px;
     height: 40px;
+    margin: 10px;
+}
+
+form input .equal{
+    width: 110px;
+}
+}
+
+@media screen and (min-width: 260px and max-width: 319px){
+
+.calculator form input{
+    width: 35px;
+    height: 40px;
     margin: 5px;
 }
 
 form input .equal{
-    width: 92px;
+    width: 90px;
 }
 }
-
-
-
